 * languages are now loaded from the types.
 * removed lanuage dataset
 * removed language related methods
 * added lots of phrases for all major languages to system phrases.
 * removed licenses.xml
 * used datatype system for licence field in document.


2006-08-09 tmb

 * Split search result pagination out of Search into a generic function 
    which paginates any List of items
 * Function currently in a new Paginate module, but needs a better home 
    - perhaps in List?
 * Added page jumps to existing Next/Prev page links

2006-08-09 cjg
 
 * Removed old submission code.

2006-08-09 cjg

 * Moved subscriptions to the new user interface

2006-08-09 cjg

 * Shifted old type methods into backcompatibility.pm
 * arclanguages dataset now replaced with a special subclass of "set" 
    field which has the options of the languages allowed for the 
    current repository.

2006-08-09 cjg

 * Removed DataObj::License and DataObj::Permissions, MetaField::License
    and import_permissions. Removed them as datasets too.
   (permissions may make a come back in 3.1)

2006-08-11 cjg
 
 * Added some missing images. 
 * Added missing Fields.pm
 * Added missing languages.xml

2006-08-11 tmb
 * Lists on Items and Editorial Review screens are now paginated
 * Added sorting functionality to Editorial Review screen
 * Added simple default template for rendering pages

2006-08-14 cjg
 * Added order_methods param to searches to override default options.
 * Added custom order list for editorial review screen.

2006-08-14 tmb
 * Deprecated get_order_names and get_order_name
 * render_order_menu in Search now renders labels for its order_methods 
 * Added specific configuration options for sorting methods on editorial 
    review screen
 * Displayed the right datetime info on items (lastmod) and review 
    (status_changed) screens

2006-08-15 tdb
 * Added get_gid method to DataObj (implemented for EPrint and Access)