@@ -4120,3 +4120,6 @@ PACKAGE: 2.2.99.2
 
 2006-08-15 tdb
  * Added get_gid method to DataObj (implemented for EPrint and Access)
+ * oai2 now uses xmlns and schema from the plugins
+ * Modified OA:make_record to take a plugin argument to export to XML
+ * Now only uses output_plugins argument from config
